--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,7 +19,7 @@ body {
   margin: 0 auto;
   padding: 1rem 2rem;
   text-align: left;
-  background-image: url"ImageGallery/Images/pattern.png";
+  background-image: url"ImageGallery/Images/background.jpg";
 }
 
 section {
