--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,6 +9,7 @@ body {
   line-height: 1.5;
   color: #606c71;
   text-align: center;
+  background-image: url"ImageGallery/Images/background.jpg";
 }
 
 .container {
