--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -110,3 +110,9 @@ footer {
 .modal img {
   width: 100%;
 }
+
+.column1of3, .column2of3, .column3of3 {
+  width:300px;
+  float: left;
+  margin: 10px;
+}
