--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.5;
   color: #606c71;
   text-align: center;
-  background: url("../ImageGallery/Images/background.jpg");
+  background-color: lemonchiffon;
 }
 
 .container {
@@ -20,12 +20,12 @@ body {
   margin: 0 auto;
   padding: 1rem 2rem;
   text-align: left;
-  background: url("../ImageGallery/Images/background.jpg");
+  background-color: lemonchiffon;
 }
 
 section {
     margin: 3em 0;
-    background: url("../ImageGallery/Images/background.jpg");
+    background-color: lemonchiffon;
 }
 
 a {
