--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -62,6 +62,7 @@ h3 {
   color: #999;
   font-family: 'Slabo 27px', serif;
   font-size: 1em;
+  text-align: center;
   text-transform: uppercase;
 }
 
